@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST asciidoctor-0.1.4.tar.gz 225956 SHA256 ed80cf059dcef9e91465c80500bd56f0a8176475ab2dfdb1ca438b1791135b64 SHA512 2e463741c0da8adcb8a1af65a44f5a91cb04e4b3290b7463c592c7cd7070b5f49cbed0e97a763ec09acf5691ea0a5fb338f999f63ad09b5edf038c570793834c WHIRLPOOL 35cd7e3f3a8b57177d47f10d3fc8a303a75055363c643fdda21fb70d62c0def6fcbce443a7db37cde10aa0de3a97c2b05b70ae48e7fe4be90085d5bac3a39a77
+DIST asciidoctor-1.5.0.tar.gz 438838 SHA256 eb83ffe7f516ddf6fec406825cc5a98679cfd1a216e6bb7f98d16f682b5dd9ef SHA512 ae2dd796715d6ef1ca4e2846ea1ae0752bdc8b506d049eb450a65623a91cf6715984ae1b5eb2829adcb3137199d33240c332d103035172ed3d1ec44f8ebd234b WHIRLPOOL ab8c773f3ad5fd6be3f138c6c1b1e0e463ba549a052e1fa175b3020497fd888c1ed3c1ea68d4acfc6260398cb5d4db4f17cac3fcdec9ad7c2bcdd4d7b18bcc89
 EBUILD asciidoctor-0.1.4.ebuild 808 SHA256 435ef95dcefcf199fe698d247d4c0ee2adc2e04b901b073a98105e2cac5d011e SHA512 636f11f7236a1705d625c1c82624845fed20830fee7ca79fc395bdbdb04b5dba0068fa28cb5c1ad5a06a771dd0822ec1673591f3a228baf581b8ff9621ba4a02 WHIRLPOOL af8afc8816d59a356f3b1333b0e5925f6d37bf0845273bac12001e93093b3a8d082f177fa193de15eaed0b372bbbe5fda246a149176bf9c5e068b941cd46a749
-MISC ChangeLog 489 SHA256 e3a1995875b10472eee798ea3d439861a873ad2a13e2145bebf878bef7a60dbb SHA512 43af6fc97c9f3e2ba23a1016c4de11fb93d976aac983d5d3e88e1b59ff5c13fa8d643c11deebe596b2dc5f07c7b0273fb1742eb48b41c14a2ba5bafc3f447510 WHIRLPOOL 0b31b66c2273d0ec197fab05fa8d459107c51ad6b47a1a54e276f340dbdfac4e62696a2bcde45a445058212e5901d4f9133bc55a343fbae75f7fcc075c4b36f5
+EBUILD asciidoctor-1.5.0.ebuild 824 SHA256 81b521faed9c11f7aa0460d40150924cc140e9e753a6957d37329e46fd8c03e4 SHA512 248d0e038dabe5a9c5198be17ae15b7822b330c2a2cd48f8cb636f126f4e6afd2db0d85c8a5dfb034baed0c34e0e1243df6f5326fd1d30b697732a9fb74afeb9 WHIRLPOOL b59866598992e78a2f6b2a4fdda1a1957121e04911dab6547d4118493f11efb3a487e1388a4283d2687da48abb6e2156af503a64b660023bd50fb0ac9f4545da
+MISC ChangeLog 618 SHA256 341a0ba523d6c527d420fa7446f3a6c627af27903b12588faa2ba82859f65daf SHA512 0bfd092447356b52fe39611a1e35d767d28fc89257584865733a5634997e3557cd129cd651796bef76ec63c2318a2843b2f4da2bf68d0ddedaf9cff982df0f98 WHIRLPOOL 9f1e4f32c682267a655a25cd90129f9dedf82fe12566303e6e23c00211e90ccf2dea925f6fd8ce3c91e5200bffc2943db4b46bbf2a7618033e9cbdff03a305dd
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlPq+BsACgkQiIP6VqMIqNcvQgD/VXcPlSj/QpNDvGmUL2PI7jFH
+RWRcgsNV55OqzEacsHMA/RQMgQwf1r/Aun/8MjRBflnH2rp5Hx0L5Qz0UHqcOHJM
+=Ibq5
+-----END PGP SIGNATURE-----
