@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=ruby_targets_ruby19? ( test? ( dev-ruby/coderay[ruby_targets_ruby19] dev-ruby/erubis[ruby_targets_ruby19] dev-ruby/haml[ruby_targets_ruby19] dev-ruby/nokogiri[ruby_targets_ruby19] dev-ruby/slim[ruby_targets_ruby19] dev-ruby/tilt[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/coderay[ruby_targets_ruby20] dev-ruby/erubis[ruby_targets_ruby20] dev-ruby/haml[ruby_targets_ruby20] dev-ruby/nokogiri[ruby_targets_ruby20] dev-ruby/slim[ruby_targets_ruby20] dev-ruby/tilt[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rdoc[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rdoc[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) )
+DESCRIPTION=Processor for converting AsciiDoc source files or strings into HTML 5, DocBook 4.5 and other formats
+EAPI=5
+HOMEPAGE=https://github.com/asciidoctor/asciidoctor
+IUSE=elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 doc test test
+KEYWORDS=~amd64
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 )
+SLOT=0
+SRC_URI=https://github.com/asciidoctor/asciidoctor/archive/v1.5.0.tar.gz -> asciidoctor-1.5.0.tar.gz
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	738ee4b7f8b16d4a734b4d37717db89b	ruby-ng	14f0490e24cbad7c17cece628b3d111e	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=75ad95984aa2ec50e47c1d4c798856e0
